[package]
name = "yayagram"
version = "0.8.0"
authors = ["r00ster91 <r00ster91@protonmail.com>"]
edition = "2018"
description = "Play nonograms/picross in your terminal"
readme = "README.md"
repository = "https://github.com/r00ster91/yayagram/"
license = "MIT"
keywords = ["nonogram", "cli", "game", "terminal", "puzzle"]
categories = ["command-line-utilities", "games"]

[dependencies]
terminal = { package = "tanmatsu", version = "0.6.3" }
rand = { version = "0.8.4", default-features = false, features = ["small_rng", "std"] }
itertools = "0.10.1"
line_drawing = "0.8.1"

[profile.compact]
inherits = "release"
opt-level = "z"
lto = true
panic = 'abort'
codegen-units = 1

# export RUSTFLAGS="-C target-cpu=native"
[profile.release]
opt-level = 3
lto = true
panic = 'abort'
codegen-units = 1

[patch.crates-io]
tanmatsu = { path = "tanmatsu-0.6.3" }
