[package]
name = "yayagram"
version = "0.8.5"
authors = ["wooster0 <wooster0@proton.me>"]
edition = "2018"
description = "Play nonograms/picross in your terminal"
readme = "README.md"
repository = "https://github.com/r00ster91/yayagram/"
license = "MIT"
keywords = ["nonogram", "cli", "game", "terminal", "puzzle"]
categories = ["command-line-utilities", "games"]

[dependencies]
terminal = { package = "tanmatsu", version = "0.6.4" }
fastrand = "1.9.0"
itertools = "0.10.5"
line_drawing = "0.8.1"

# export RUSTFLAGS="-C target-cpu=native"
# cargo build --profile compact
[profile.compact]
inherits = "release"
opt-level = "z"
lto = true
panic = 'abort'
codegen-units = 1

# export RUSTFLAGS="-C target-cpu=native"
# cargo build --release
[profile.release]
opt-level = 3
lto = true
panic = 'abort'
codegen-units = 1
